Fixed background. I think? and added an outline to the title since it belnded into the background too much.

--- a/project2/feedback.css
+++ b/project2/feedback.css
@@ -39,15 +39,19 @@ nav li { float: left;
     padding: 20px;
 }
 
-h1 { color: #000000;
+h1 {
+    color: #000;
     margin-bottom: 0;
-    margin-top: 0; }
+    margin-top: 0;
+    text-shadow: -1px -1px 0 #FFF, 1px -1px 0 #FFF, -1px 1px 0 #FFF, 1px 1px 0 #FFF;
+}
 
 html {
     height: 100%;
     background-image: url("office2.jpg");
     background-repeat: no-repeat;
     background-size: cover;
+    background-attachment: fixed;
 }
 
 body {
@@ -123,7 +127,6 @@ footer { color: #000000;
     margin-left: 4%;
     float: right;
 }
-
 
 
 #userPage #column { padding: 15px 0px 15px 0px;
@@ -263,9 +266,10 @@ li { list-style-type: none;}
     }
 
     h1 {
-        color: #000000;
+        color: #000;
         margin-bottom: 0;
         margin-top: 0;
+        text-shadow: -1px -1px 0 #FFF, 1px -1px 0 #FFF, -1px 1px 0 #FFF, 1px 1px 0 #FFF;
     }
 
     html {
